fixed wrap

--- a/public/style.css
+++ b/public/style.css
@@ -169,7 +169,7 @@ aside{
   background-color: var(--color-button);
   transition: 300ms ease-in-out;
   overflow: hidden;
-  text-wrap: nowrap;
+  text-wrap: wrap;
 }
 
 aside.show{
